--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h2 class="title is-2 neon-cyan has-text-centered mb-6">About Me</h2>
       <div class="bg-panel">
         <p>
-          I create futuristic digital experiences with neon, cyber aesthetics and high interactivity.
+          I create digital experiences with neon, cyber aesthetics and high interactivity.
         </p>
       </div>
     </div>
@@ -90,9 +90,10 @@
           <div class="neon-card">
             <h3 class="title is-4 neon-cyan">Backend</h3>
             <ul>
-              <li>Node.js</li>
               <li>Express</li>
               <li>PHP</li>
+              <li>MySQL</li>
+              <li>Laravel</li>
             </ul>
           </div>
         </div>
@@ -102,8 +103,9 @@
             <h3 class="title is-4 neon-cyan">Design</h3>
             <ul>
               <li>Figma</li>
-              <li>UI/UX</li>
               <li>Prototyping</li>
+              <li>LucidChart</li>
+              <li>PowerPoint</li>
             </ul>
           </div>
         </div>
@@ -112,9 +114,10 @@
           <div class="neon-card">
             <h3 class="title is-4 neon-cyan">Tools</h3>
             <ul>
-              <li>Git / GitHub</li>
+              <li>GitHub</li>
               <li>VS Code</li>
-              <li>GSAP</li>
+              <li>PhPstorm</li>
+              <li>Postman</li>
             </ul>
           </div>
         </div>
@@ -136,17 +139,6 @@
     <div class="container">
       <h2 class="title is-2 neon-purple has-text-centered mb-6">Experience</h2>
 
-      <div class="timeline">
-        <div class="timeline-item neon-timeline">
-          <h3 class="title is-4 neon-cyan">2024 — Frontend Developer</h3>
-          <p>Company XYZ</p>
-        </div>
-
-        <div class="timeline-item neon-timeline">
-          <h3 class="title is-4 neon-cyan">2022 — UI/UX Designer</h3>
-          <p>CyberWave Designs</p>
-        </div>
-      </div>
 
     </div>
   </section>
@@ -177,7 +169,7 @@
 
   <!-- FOOTER -->
   <footer class="footer neon-footer">
-    <p>© 2026 Your Name — Futuristic Neon Portfolio</p>
+    <p>© 2026 Raven — Futuristic Neon Portfolio</p>
   </footer>
 
   <script src="script.js"></script>
